fix(css): parallax overflow

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -460,7 +460,7 @@ footer {
 
 .line-3 {
   border-bottom: 1px solid #7373736e;
-  margin: 4em 20em 0 20em;
+  margin: 8em 20em 0 20em;
   padding: 5em 5em;
 }
 
@@ -521,7 +521,7 @@ a:hover > p {
   grid-column: 1 / 3;
   grid-row: 1 / 3;
 
-  height: 90vh;
+  height: 100vh;
   width: 45%;
   object-fit: cover;
 
@@ -532,7 +532,7 @@ a:hover > p {
 .about-txt {
   position: absolute;
   left: 45%;
-  height: 90vh;
+  height: 100vh;
   background-color: #afafaf4c;
 }
 
@@ -561,13 +561,6 @@ a:hover > p {
   font-weight: 300;
   line-height: 1.5em;
   word-break: break-all;
-}
-
-.parallax-overlap {
-  position: fixed;
-  z-index: 2;
-  width: 100vw;
-  height: 100vh;
 }
 
 /* 
